// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.TBody allowTags=undefined 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkGrammar=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkGrammar=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkHighlight=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkHighlight=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkSpaces=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody checkSpaces=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody className="my-classname" 1`] = `
<tbody
  className="uu5-bricks-table-tbody my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="brown" 1`] = `
<tbody
  className="color-schema-brown uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="brown-rich" 1`] = `
<tbody
  className="color-schema-brown-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="cyan" 1`] = `
<tbody
  className="color-schema-cyan uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="cyan-rich" 1`] = `
<tbody
  className="color-schema-cyan-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="default" 1`] = `
<tbody
  className="color-schema-default uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="green" 1`] = `
<tbody
  className="color-schema-green uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="green-rich" 1`] = `
<tbody
  className="color-schema-green-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="grey" 1`] = `
<tbody
  className="color-schema-grey uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="grey-rich" 1`] = `
<tbody
  className="color-schema-grey-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="orange" 1`] = `
<tbody
  className="color-schema-orange uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="orange-rich" 1`] = `
<tbody
  className="color-schema-orange-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="pink" 1`] = `
<tbody
  className="color-schema-pink uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="pink-rich" 1`] = `
<tbody
  className="color-schema-pink-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="purple" 1`] = `
<tbody
  className="color-schema-purple uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="purple-rich" 1`] = `
<tbody
  className="color-schema-purple-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="red" 1`] = `
<tbody
  className="color-schema-red uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="red-rich" 1`] = `
<tbody
  className="color-schema-red-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="yellow" 1`] = `
<tbody
  className="color-schema-yellow uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody colorSchema="yellow-rich" 1`] = `
<tbody
  className="color-schema-yellow-rich uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody content="This is Content from ContentMixin" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody content=12345 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody controlled=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody controlled=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody default props 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody disabled=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody disabled=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tbody>
`;

exports[`UU5.Bricks.Table.TBody dynamic=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody dynamic=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody hidden=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody hidden=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody id="myId" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody ignoreHTML=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody ignoreHTML=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody mainAttrs=undefined 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody name="myName" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="bigBox" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="bigBoxCollection" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="box" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="boxCollection" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="container" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Table.TBody nestingLevel="page" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="smallBox" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="smallBoxCollection" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody nestingLevel="spa" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody noIndex=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody noIndex=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody props.allowTags - example 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-tbody
      allowTags={
        Array [
          "UU5.Example.MyCompButton",
        ]
      }
      colorSchema="blue"
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-td
          content="Rimmer"
          id="uuID4"
        />
        <table-td
          content="2nd class technician"
          id="uuID5"
        />
        <table-td
          content="comical"
          id="uuID6"
        />
      </table-tr>
      <table-tr
        id="uuID7"
      >
        <MyAllowTagsComponents
          content="AllowTags Content"
          id="allowID"
        />
      </table-tr>
    </table-tbody>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table.TBody pureRender=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody pureRender=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody selected=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody selected=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody style="padding:8px; borderRadius: 2px" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody style={"backgroundColor":"red","color":"blue"} 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody textCorrector=false 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody textCorrector=true 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TBody tooltip="My Tooltip" 1`] = `
<tbody
  className="uu5-bricks-table-tbody"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
